--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@tauri-apps/api": "^1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.5.14",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vite-plugin-solid": "^2.8.0",
-    "@tauri-apps/cli": "^1"
+    "vite-plugin-solid": "^2.8.0"
   }
 }
