--- a/package.json
+++ b/package.json
@@ -8,12 +8,25 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "app": "tauri dev"
   },
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.7.8",
-    "@tauri-apps/api": "^1"
+    "@solidjs/router": "^0.13.3",
+    "@tauri-apps/api": "^1",
+    "@univerjs/core": "^0.1.11",
+    "@univerjs/design": "^0.1.11",
+    "@univerjs/docs": "^0.1.11",
+    "@univerjs/docs-ui": "^0.1.11",
+    "@univerjs/engine-formula": "^0.1.11",
+    "@univerjs/engine-render": "^0.1.11",
+    "@univerjs/facade": "^0.1.11",
+    "@univerjs/sheets": "^0.1.11",
+    "@univerjs/sheets-formula": "^0.1.11",
+    "@univerjs/sheets-ui": "^0.1.11",
+    "@univerjs/ui": "^0.1.11",
+    "solid-js": "^1.7.8"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.14",
